--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
-
+    <link href="http://fonts.cdnfonts.com/css/sylfaen" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
@@ -69,7 +69,19 @@
     </div>
 
     <div class="block3">
-
+        <img src="../styles/images/Dima/Photo3-1.png" class="Photo3-1">
+        <div class="border3-1"></div>
+        <span class="text3-1"><i class="fa-solid fa-file-image"></i></span>
+        <div class="scroll3-1"></div>
+        <div class="scroll3-2"></div>
+        <span class="text3-2">Bananas Foster Ice Cream Cake</span>
+        <span class="text3-3">1 (8 ounce) container frozen whipped topping, thawed 20 chocolate round wafers, divided</span>
+        <span class="text3-4">1 (7 1/4 ounce) bottle Smucker's® Hot Dark Chocolate Microwaveable Topping, divided</span>
+        <span class="text3-5">Directions</span>
+        <span class="text3-6">ARRANGE 8 to 9 ice cream sandwiches in 9-inch square pan, cutting to form an even layer. Spread with half of whipped topping. Break or crush chocolate and sprinkle over the whipped cream. Microwave 1 cup of chocolate into small microwave-safe bowl on HIGH for 30 seconds.</span>
+        <span class="text3-7">Drizzle evenly over wafers.</span>
+        <span class="text3-8">TOP with remaining 8 to 9 ice cream sandwiches to form an even layer. </span>
+        <span class="text3-9">Spread with remaining topping. Freeze 3 hours or overnight. Remove</span>
     </div>
 
     <div class="block4">
