--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" type="text/css" href="../styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@350&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@350;600;400&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;900&display=swap" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/sylfaen" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -148,7 +148,7 @@
         <img class="photo8-1" src="../styles/images/Ivan/cofe.png">
         <span class="text8-1">Popular Now</span>
         <span class="text8-2">Vanilla Frozen Coffee</span>
-        <span class="text8-3">Mix coffee, sugar and creamer.Pour into blender and add ice cubes.Blend until smooth.</span>
+        <span class="text8-3">Mix coffee, sugar and creamer.<br>Pour into blender and add ice cubes.<br>Blend until smooth.</span>
         <span class="text8-4"><i class="fa fa-regular fa-clock"></i></span>
         <span class="text8-5">6mins</span>
         <span class="text8-6"><i class="fa fa-regular fa-comment"></i></span>
@@ -156,8 +156,27 @@
         <span class="text8-8"><i class="fa fa-regular fa-eye"></i></span>
         <span class="text8-9">400</span>
         <div class="line8-1"></div>
+        <a href="#viewbutton8-1"><button class="viewbutton8-1" id="viewbutton8-1">GET IT RECIPE</button></a>
+    </div>
+    <div class="block9">
+        <span class="text9-1">Target</span>
+        <img src="../styles/images/Ivan/line.png" class="line9-1">
+        <span class="text9-2">Presentation line</span>
+        <span class="text9-3">Housewives</span>
+        <span class="text9-4">Lorem ipsum dolor sit amet, prima ceteros.</span>
+        <span class="text9-5">Newlyweds</span>
+        <span class="text9-6">Has brute elitr deserunt ea, assentior eloquen-tiam neglegentur te sed.</span>
+        <span class="text9-7">Business lady</span>
+        <span class="text9-8">Ei nam primis putent signiferumque.</span>
+        <img src="../styles/images/Ivan/white1.jpg" class="img9-1">
+        <img src="../styles/images/Ivan/white2.jpg" class="img9-2">
+        <img src="../styles/images/Ivan/white3.jpg" class="img9-3">
+        <img src="../styles/images/Ivan/red1.jpg" class="img9-4">
+        <img src="../styles/images/Ivan/green1.jpg" class="img9-5">
+        <img src="../styles/images/Ivan/green2.jpg" class="img9-6">
     </div>
 </div>
+
 <div class = "ARTYOM">
     <div class="block11">
         <span class="text first">Tags</span>
