--- a/styles/styles.css
+++ b/styles/styles.css
@@ -589,7 +589,7 @@ body {
 }
 .text7-1{
     font-family: 'Josefin Sans';
-    font-style: italic;
+    transform:skew(-7deg);
     font-size: 20px;
     line-height: 1.2;
     font-weight: 400;
@@ -721,6 +721,7 @@ body {
     color: #000000;
     position: absolute;
     left: 85px;
+    right:15px;
     top:130px;
 }
 .text7-8{
@@ -754,6 +755,7 @@ body {
     color: #000000;
     position: absolute;
     left: 85px;
+    right:30px;
     top:230px;
 }
 .text7-11{
@@ -787,6 +789,7 @@ body {
     color: #000000;
     position: absolute;
     left: 85px;
+    right:30px;
     top:320px;
 }
 .icons7-1{
@@ -871,7 +874,7 @@ body {
 }
 .text8-3{
     font-family: 'Josefin Sans';
-    font-style: italic;
+    transform:skew(-7deg);
     font-size: 16px;
     line-height: 1.2;
     font-weight: 400;
@@ -880,6 +883,7 @@ body {
     position: absolute;
     left: 20px;
     top: 130px;
+    width: 250px;
 
 }
 .text8-4{
@@ -948,7 +952,6 @@ body {
     left:245px;
     top:205px;
 }
-
 .line8-1{
     width: 1px;
     height: 14px;
@@ -957,7 +960,190 @@ body {
     left:185px;
     top:205px;
 }
-
+.viewbutton8-1{
+    font-family: 'Josefin Sans';
+    font-size:12px;
+    line-height: 1.2;
+    top:200px;
+    left:20px;
+    position: absolute;
+    width: 105px;
+    height: 28px;
+    border: 1px solid #c2c2c2;
+    font-weight: 300;
+    color: #010101;
+    background-color: #ffffff;
+}
+.viewbutton8-1:hover{
+    background-color: #c2c2c2;
+    color:#000000;
+    cursor: pointer;
+}
+/*---------------------------------------------------------*/
+.block9{
+    width: 290px;
+    height: 471px;
+    background-color: #ffffff;
+    box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.15);
+    position: absolute;
+    left:200px;
+    top:2760px;
+}
+.text9-1{
+    font-family: 'Josefin Sans';
+    transform:skew(-7deg);
+    font-size: 20px;
+    line-height: 1.2;
+    font-weight: 400;
+    letter-spacing: 0.025em;
+    color: #000000;
+    position: absolute;
+    left:15px;
+    top:35px;
+}
+.line9-1{
+    width: 251px;
+    height: 2px;
+    opacity: 0.2;
+    background-color: #555555;
+    position: absolute;
+    left:15px;
+    top:65px;
+}
+.text9-2{
+    font-family: 'Playfair Display';
+    font-size: 20px;
+    line-height: 1.2;
+    font-weight: 900;
+    letter-spacing: 0.025em;
+    color: #055555;
+    position: absolute;
+    left:30px;
+    top:85px;
+}
+.text9-3{
+    font-family: 'Josefin Sans';
+    font-size: 18px;
+    line-height: 1.2;
+    font-weight: 300;
+    letter-spacing: 0.025em;
+    color: #555555;
+    position: absolute;
+    left:105px;
+    top:145px;
+}
+.text9-4{
+    opacity: 0.5;
+    font-family: 'Josefin Sans';
+    transform:skew(-7deg);
+    font-size: 14px;
+    line-height: 1.2;
+    font-weight: 300;
+    letter-spacing: 0.025em;
+    color: #000000;
+    position: absolute;
+    left: 105px;
+    top:165px;
+    right: 50px;
+}
+.text9-5{
+    font-family: 'Josefin Sans';
+    font-size: 18px;
+    line-height: 1.2;
+    font-weight: 300;
+    letter-spacing: 0.025em;
+    color: #555555;
+    position: absolute;
+    left:105px;
+    top:250px;
+}
+.text9-6{
+    opacity: 0.5;
+    font-family: 'Josefin Sans';
+    transform:skew(-7deg);
+    font-size: 14px;
+    line-height: 1.2;
+    font-weight: 300;
+    letter-spacing: 0.025em;
+    color: #000000;
+    position: absolute;
+    left: 105px;
+    top:275px;
+    right: 30px;
+}
+.text9-7{
+    font-family: 'Josefin Sans';
+    font-size: 18px;
+    line-height: 1.2;
+    font-weight: 300;
+    letter-spacing: 0.025em;
+    color: #555555;
+    position: absolute;
+    left:105px;
+    top:365px;
+}
+.text9-8{
+    opacity: 0.5;
+    font-family: 'Josefin Sans';
+    transform:skew(-7deg);
+    font-size: 14px;
+    line-height: 1.2;
+    font-weight: 300;
+    letter-spacing: 0.025em;
+    color: #000000;
+    position: absolute;
+    left: 105px;
+    top:385px;
+    right: 50px;
+}
+.img9-1{
+    width: 58px;
+    height: 59px;
+    background-color: #b7b7b7;
+    position: absolute;
+    left:25px;
+    top:145px;
+}
+.img9-2{
+    width: 58px;
+    height: 59px;
+    background-color: #b7b7b7;
+    position: absolute;
+    left:25px;
+    top:250px;
+}
+.img9-3{
+    width: 58px;
+    height: 59px;
+    background-color: #b7b7b7;
+    position: absolute;
+    left:25px;
+    top:355px;
+}
+.img9-4{
+    width: 30px;
+    height: 55px;
+    background-color: #b50051;
+    position: absolute;
+    left: 53px;
+    top: 149px;
+}
+.img9-5{
+    width: 53px;
+    height: 59px;
+    background-color: #055454;
+    position: absolute;
+    left:30px;
+    top:250px;
+}
+.img9-6{
+    width: 58px;
+    height: 29px;
+    background-color: #87d0c5;
+    position: absolute;
+    top:385px;
+    left: 25px;
+}
 /* ======================ARTYOM===============*/
 .block11 {
     width: 290px;
