--- a/templates/index.html
+++ b/templates/index.html
@@ -82,6 +82,14 @@
         <span class="text3-7">Drizzle evenly over wafers.</span>
         <span class="text3-8">TOP with remaining 8 to 9 ice cream sandwiches to form an even layer. </span>
         <span class="text3-9">Spread with remaining topping. Freeze 3 hours or overnight. Remove</span>
+        <span class="text3-10">15mins</span>
+        <span class="text3-11"><i class="fa fa-regular fa-clock"></i></span>
+        <span class="text3-12">Easy</span>
+        <div class="bar3-1"></div>
+        <div class="bar3-2"></div>
+        <div class="bar3-3"></div>
+        <div class="bar3-4"></div>
+        <button class="btn3-1">SAVE RECIPE</button>
     </div>
 
     <div class="block4">
