--- a/styles/styles.css
+++ b/styles/styles.css
@@ -282,12 +282,12 @@ body {
     top: 20px;
 }
 .text3-2{
-    width: 492px;
+    width: 550px;
     height: 27px;
     color: #055555;
     font-family: "Playfair Display - Black", serif;
-    font-size: 32px;
-    font-weight: 400;
+    font-size: 37px;
+    font-weight: bold;
     font-style: normal;
     letter-spacing: normal;
     line-height: normal;
@@ -333,6 +333,9 @@ body {
     height: 126px;
     background-color: #555555;
 }
+.scroll3-2:hover{
+    cursor: pointer;
+}
 .text3-5{
     font-family: "Playfair Display";
     font-weight: 700;
@@ -374,6 +377,106 @@ body {
     font-size: 15px;
     left: 555px;
     top: 375px;
+}
+.bar3-1{
+    width: 5px;
+    height: 11px;
+    background-color: #555555;
+    position: absolute;
+    top: 90px;
+    left: 641px;
+}
+.bar3-2{
+    width: 5px;
+    height: 15px;
+    background-color: #555555;
+    position: absolute;
+    top: 86px;
+    left: 648px;
+}
+.bar3-3{
+    width: 5px;
+    height: 19px;
+    background-color: #555555;
+    position: absolute;
+    top: 82px;
+    left: 655px;
+}
+.bar3-4{
+    width: 5px;
+    height: 24px;
+    border: 1px solid #555555;
+    position: absolute;
+    top: 75px;
+    left: 662px;
+}
+.text3-10{
+    width: 53px;
+    height: 13px;
+    color: #555555;
+    font-family: "Open Sans";
+    font-size: 16px;
+    font-weight: 300;
+    font-style: normal;
+    letter-spacing: normal;
+    line-height: normal;
+    text-align: left;
+    position: absolute;
+    top: 85px;
+    left: 580px;
+}
+.text3-11{
+    width: 14px;
+    height: 15px;
+    color: #555555;
+    font-family: "Font Awesome", serif;
+    font-size: 16px;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: normal;
+    line-height: normal;
+    text-align: left;
+    position: absolute;
+    top: 85px;
+    left: 560px;
+}
+.text3-12{
+    width: 33px;
+    height: 17px;
+    color: #555555;
+    font-family: "Josefin Sans";
+    font-size: 18px;
+    font-weight: 300;
+    font-style: normal;
+    letter-spacing: normal;
+    line-height: normal;
+    text-align: left;
+    position: absolute;
+    top: 85px;
+    left: 675px;
+}
+.btn3-1 {
+    color: #000000;
+    font-family: "Josefin Sans", serif;
+    font-size: 12px;
+    font-weight: 300;
+    font-style: normal;
+    letter-spacing: normal;
+    line-height: normal;
+    text-align: center;
+    text-transform: uppercase;
+    width: 105px;
+    height: 28px;
+    border: 1px solid #c2c2c2;
+    background-color: white;
+    position: absolute;
+    top: 80px;
+    left: 960px;
+}
+.btn3-1:hover{
+    background-color: #c2c2c2;
+    color:#000000;
+    cursor: pointer;
 }
 /* --------------------------------------------- */
 .block4{
@@ -1173,7 +1276,7 @@ body {
     width: 36px;
     height: 19px;
     top: 26px;
-    left: 17px;   
+    left: 17px;
 }
 .second {
     width: 76px;
@@ -1498,7 +1601,7 @@ button:hover {
 .facebook {
     position: absolute;
     top: 327px;
-    left: 135px; 
+    left: 135px;
     width: 12px;
     height: 22px;
     color: #555555;
@@ -1509,12 +1612,12 @@ button:hover {
     letter-spacing: normal;
     line-height: normal;
     text-align: left;
-    letter-spacing: 0.3px;   
+    letter-spacing: 0.3px;
 }
 .facebook2 {
     position: absolute;
     top: 399px;
-    left: 137px; 
+    left: 137px;
     width: 12px;
     height: 22px;
     color: #555555;
@@ -1525,12 +1628,12 @@ button:hover {
     letter-spacing: normal;
     line-height: normal;
     text-align: left;
-    letter-spacing: 0.3px;   
+    letter-spacing: 0.3px;
 }
 .g {
     position: absolute;
     top: 330px;
-    left: 169px;    
+    left: 169px;
     width: 29px;
     height: 19px;
     color: #555555;
@@ -1541,11 +1644,11 @@ button:hover {
     letter-spacing: normal;
     text-align: left;
     letter-spacing: 0.55px;
-} 
+}
 .g2 {
     position: absolute;
     top: 402px;
-    left: 171px;    
+    left: 171px;
     width: 29px;
     height: 19px;
     color: #555555;
@@ -1556,7 +1659,7 @@ button:hover {
     letter-spacing: normal;
     text-align: left;
     letter-spacing: 0.55px;
-} 
+}
 .text13-5 {
     width: 250px;
     height: 16px;
@@ -1572,7 +1675,7 @@ button:hover {
     letter-spacing: 0.4px;
     position: absolute;
     top: 367px;
-    left: 64px;  
+    left: 64px;
 }
 .block14 {
     width: 328px;
