--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
     <link href="http://fonts.cdnfonts.com/css/sylfaen" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Open+Sans:wght@300;400;500;600;700;800&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <style>
         a {
@@ -69,12 +69,28 @@
         <img src="../styles/images/Dima/Photo2-3.png" class="Photo2-3">
         <span class="text2-3">Dark Chocolate Crunch Ice Cream Sandwich Cake</span>
         <span class="text2-4"><i class="fa fa-regular fa-clock"></i></span>
-        <span class="text2-5">15mins</span>
+        <span class="text2-5">35mins</span>
         <div class="line2-1"></div>
         <span class="text2-6"><i class="fa fa-regular fa-comment"></i></span>
-        <span class="text2-7">12</span>
+        <span class="text2-7">7</span>
         <span class="text2-8"><i class="fa fa-regular fa-eye"></i></span>
-        <span class="text2-9">37</span>
+        <span class="text2-9">14</span>
+
+        <span class="text2-4-2"><i class="fa fa-regular fa-clock"></i></span>
+        <span class="text2-5-2">20mins</span>
+        <div class="line2-1-2"></div>
+        <span class="text2-6-2"><i class="fa fa-regular fa-comment"></i></span>
+        <span class="text2-7-2">4</span>
+        <span class="text2-8-2"><i class="fa fa-regular fa-eye"></i></span>
+        <span class="text2-9-2">356</span>
+
+        <span class="text2-4-3"><i class="fa fa-regular fa-clock"></i></span>
+        <span class="text2-5-3">15mins</span>
+        <div class="line2-1-3"></div>
+        <span class="text2-6-3"><i class="fa fa-regular fa-comment"></i></span>
+        <span class="text2-7-3">4</span>
+        <span class="text2-8-3"><i class="fa fa-regular fa-eye"></i></span>
+        <span class="text2-9-3">167</span>
     </div>
 
     <div class="block3">
