--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;300;400&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/sylfaen" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -94,6 +95,12 @@
 
     <div class="block4">
         <img src="../styles/images/Dima/Photo4-1.png" class="Photo4-1">
+        <div class="bar4-1"></div>
+        <span class="text4-1">404</span>
+        <span class="text4-2">Sorry</span>
+        <span class="text4-3">WE COULDN’T FIND THE PAGE</span>
+        <img src="../styles/images/Dima/Photo4-2.png" class="Photo4-2">
+        <button class="btn4-1">BACK</button>
     </div>
 
     <div class="block5">
