--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@350;600;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@350&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;900&display=swap" rel="stylesheet">
@@ -36,8 +38,14 @@
 
 <body>
 <div class="DIMA">
-    <div class="base">
-
+    <div class="header">
+        <a href="#"><img src="../styles/images/Dima/LogoSmall.png" class="LogoSmall"></a>
+        <a href="#" class="text0-1">HOME</a>
+        <a href="#" class="text0-2">RECIPES</a>
+        <a href="#" class="text0-3">PHOTO GALLERIES</a>
+        <a href="#" class="text0-4">VIDEOS</a>
+        <a href="#" class="text0-5">ALL CATEGORIES</a>
+        <input type="text" class="find" placeholder="&#61442; FIND A RECIPE">
     </div>
 
     <div class="block1">
@@ -104,7 +112,19 @@
     </div>
 
     <div class="block5">
-
+        <div class="bar5-1"></div>
+        <div class="bar5-2"></div>
+        <span class="text5-1">Karen Gray</span>
+        <span class="text5-2">United States</span>
+        <span class="text5-3">About Lemon</span>
+        <span class="text5-4">Over the fifteen-year life span of Food.com, we’ve learned that – in addition to eating – sharing is what you do best. And thanks to the 20 million of you who come here each month, we now have 500,000 recipes to show for it, more than anywhere else in the digital universe. We also have tons crazy-tempting photos, troves of recipe reviews and more than 2 million Facebook likes. That’s a heck of a lot of Food. Thank you!</span>
+        <span class="text5-5">Author</span>
+        <img src="../styles/images/Dima/Photo5-1.png" class="Photo5-1">
+        <img src="../styles/images/Dima/Photo5-2.png" class="Photo5-2">
+        <a href="https://www.google.com/" target="_blank"><span class="google5"><i class="fab fa-google-plus-g"></i></span></a>
+        <a href="https://www.twitter.com/" target="_blank"><span class="twitter5"><i class="fa-brands fa-twitter"></i></span></a>
+        <a href="https://www.facebook.com/" target="_blank"><span class="facebook5"><i class="fa-brands fa-facebook-f"></i></span></a>
+        <a href="https://www.pinterest.com/" target="_blank"><span class="pinterest5"><i class="fa-brands fa-pinterest"></i></span></a>
     </div>
 
 
@@ -140,7 +160,7 @@
         <img src="../styles/images/Ivan/salat.png" class="photo7-1" >
         <img src="../styles/images/Ivan/cocos.png" class="photo7-2" >
         <img src="../styles/images/Ivan/hands.png" class="photo7-3" >
-        <a href="#viewbutton"><button class="viewbutton" id="viewbutton">VIEW MORE</button></a>
+        <a href="#viewbutton"><button class="viewbutton" >VIEW MORE</button></a>
 
         <span class="text7-5">by</span>
         <span class="text7-6">Smuckersreg Toppings</span>
@@ -312,8 +332,8 @@
         <a href="#text17-arrowright" class="text17-arrowright">></a>
     </div>
     <div class="block18">
-        <a href="index.html"><img src="../styles/images/Pavel/Logo_black.png" class="Logo_black"></a>;
-        <a href="index.html" class="text18-1">HOME</a>
+        <a href="#"><img src="../styles/images/Pavel/Logo_black.png" class="Logo_black"></a>;
+        <a href="#header" class="text18-1">HOME</a>
         <a href="#text18-2" class="text18-2">RECIPES</a>
         <a href="#text18-3" class="text18-3">PHOTO GALLERIES</a>
         <a href="#text18-4" class="text18-4">VIDEOS</a>
