--- a/templates/index.html
+++ b/templates/index.html
@@ -284,8 +284,8 @@
         <img src="../styles/images/Pavel/Photo15_2.png" class="Photo15-2">
         <img src="../styles/images/Pavel/Photo15_1.png" class="Photo15-1">
         <button class="btn15-4">POST</button>
-        <a href="https://www.facebook.com/" class="text15-3">Facebook</a>
-        <a href="https://www.twitter.com/" class="text15-5">Twitter</a>
+        <a href="https://www.facebook.com/" class="text15-3" target="_blank">Facebook</a>
+        <a href="https://www.twitter.com/" class="text15-5" target="_blank">Twitter</a>
         <span class="text15-4">|</span>
         <input type="text" class="Input15-1">
     </div>
@@ -334,7 +334,7 @@
         <img src="../styles/images/Pavel/Like.png" class="like16-2">
         <img src="../styles/images/Pavel/Like.png" class="like16-3">
         <div class="ellipse16">
-            <a href="https://www.pinterest.com/"><span class="pinterest16"><i class="fa-brands fa-pinterest"></i></span></a>
+            <a href="https://www.pinterest.com/" target="_blank"><span class="pinterest16"><i class="fa-brands fa-pinterest"></i></span></a>
         </div>
     </div>
     <div class="block17">
@@ -355,10 +355,10 @@
         <a href="#text18-4" class="text18-4">VIDEOS</a>
         <a href="#text18-5" class="text18-5">ALL CATEGORIES</a>
         <span class="text18-6">2016-2017 LEMON. ALL RIGHT RESERVED</span>
-        <a href="https://www.google.com/"><span class="google18"><i class="fab fa-google-plus-g"></i></span></a>
-        <a href="https://www.twitter.com/"><span class="twitter18"><i class="fa-brands fa-twitter"></i></span></a>
-        <a href="https://www.facebook.com/"><span class="facebook18"><i class="fa-brands fa-facebook-f"></i></span></a>
-        <a href="https://www.pinterest.com/"><span class="pinterest18"><i class="fa-brands fa-pinterest"></i></span></a>
+        <a href="https://www.google.com/" target="_blank"><span class="google18"><i class="fab fa-google-plus-g"></i></span></a>
+        <a href="https://www.twitter.com/" target="_blank"><span class="twitter18"><i class="fa-brands fa-twitter"></i></span></a>
+        <a href="https://www.facebook.com/" target="_blank"><span class="facebook18"><i class="fa-brands fa-facebook-f"></i></span></a>
+        <a href="https://www.pinterest.com/" target="_blank"><span class="pinterest18"><i class="fa-brands fa-pinterest"></i></span></a>
     </div>
 </div>
 
