--- a/templates/index.html
+++ b/templates/index.html
@@ -348,8 +348,8 @@
         <a href="#text17-arrowright" class="text17-arrowright">></a>
     </div>
     <div class="block18">
-        <a href="#"><img src="../styles/images/Pavel/Logo_black.png" class="Logo_black"></a>;
-        <a href="#header" class="text18-1">HOME</a>
+        <a href="#"><img src="../styles/images/Pavel/Logo_black.png" class="Logo_black"></a>
+        <a href="#" class="text18-1">HOME</a>
         <a href="#text18-2" class="text18-2">RECIPES</a>
         <a href="#text18-3" class="text18-3">PHOTO GALLERIES</a>
         <a href="#text18-4" class="text18-4">VIDEOS</a>
@@ -361,8 +361,6 @@
         <a href="https://www.pinterest.com/" target="_blank"><span class="pinterest18"><i class="fa-brands fa-pinterest"></i></span></a>
     </div>
 </div>
-
-
 
 </body>
 
