--- a/templates/index.html
+++ b/templates/index.html
@@ -190,7 +190,7 @@
         <span class="text7-12">Smuckersreg Toppings</span>
         <span class="text7-13">Thanks for the recipe lorem nks for the recipe</span>
 
-        <a href=""> <span class="icons7-1"> <i class="fa fa-print"></i></span></a>
+        <a href="javascript:(print());"> <span class="icons7-1"> <i class="fa fa-print"></i></span></a>
         <a href="https://www.gmail.com/"> <span class="icons7-2"> <i class="fa fa-regular fa-envelope"></i></span></a>
         <a href="https://www.facebook.com/"> <span class="icons7-3"> <i class="fab fa-facebook-f"></i></span></a>
         <a href="https://www.pinterest.com/"> <span class="icons7-4  "> <i class="fab fa-pinterest"></i></span></a>
