--- a/templates/index.html
+++ b/templates/index.html
@@ -225,6 +225,16 @@
         <img src="../styles/images/Ivan/red1.jpg" class="img9-4">
         <img src="../styles/images/Ivan/green1.jpg" class="img9-5">
         <img src="../styles/images/Ivan/green2.jpg" class="img9-6">
+        <span class="text9-9">19%</span>
+        <span class="text9-10">65%</span>
+        <span class="text9-11">50%</span>
+        <a href=""> <span class="icons9-1"> <i class="fa fa-print"></i></span></a>
+        <a href="https://www.gmail.com/"> <span class="icons9-2"> <i class="fa fa-regular fa-envelope"></i></span></a>
+        <a href="https://www.facebook.com/"> <span class="icons9-3"> <i class="fab fa-facebook-f"></i></span></a>
+        <a href="https://www.pinterest.com/"> <span class="icons9-4  "> <i class="fab fa-pinterest"></i></span></a>
+    </div>
+    <div class="block10">
+
     </div>
 </div>
 
