--- a/templates/index.html
+++ b/templates/index.html
@@ -54,17 +54,15 @@
     <div class="block11">
         <span class="text first">Tags</span>
         <div class="line one"></div>
-        <span class="text11-1">#yummy   #sweet   #dinner   #lunch <br> <br>
-
-            #breakfast   #fresh   #tasty   #delish <br> <br>
-            
-            #delicious   #eating   #food</span>
+        <span class="text11-1-1">#yummy   #sweet   #dinner   #lunch</span>
+        <span class="text11-1-2">#breakfast   #fresh   #tasty   #delish</span>
+        <span class="text11-1-3">#delicious   #eating   #food</span>            
     </div>
     <div class="block12">
         <span class="text second">Calendar</span>
         <div class="line two"></div>
-        <span class="text12-1">&#60;</span>
-        <span class="text12-2">&#62;</span>
+        <a href="рпи" onclick="return false"><span class="text12-1">&#60;</span></a>
+        <a href="рпи" onclick="return false"><span class="text12-2">&#62;</span></a>
         <span class="text12-3">June 2017</span>
         <span class="text12-4"><ins>Su</ins>     <ins>Mo</ins>     <ins>Tu</ins>     <ins>We</ins>     <ins>Th</ins>     <ins>Fr</ins>     <ins>Sa</ins></span>
         <img src="/styles/images/Artyom/calendar.png" alt="" class="calendar">
@@ -78,10 +76,10 @@
         <div class="chbox"></div>
         <span class="text13-2">Remember me</span>
         <button class="btlogin">login</button>
-        <span class="text13-4">Forgot your password?</span>
-        <a href="рпи" onclick="return false"><span class="facebook"><i class="fab fa-facebook-f"></i></span></a>
-        <a href="рпи" onclick="return false"><span class="g"><i class="fab fa-google-plus-g"></i></span></a>
-        <span class="text13-5">Don’t have an accont? Sign in</span>
+        <a href="рпи" onclick="return false"><span class="text13-4">Forgot your password?</span></a>
+        <a href="https://facebook.com""><span class="facebook"><i class="fab fa-facebook-f"></i></span></a>
+        <a href="https://gmail.com"><span class="g"><i class="fab fa-google-plus-g"></i></span></a>
+        <span class="text13-5">Don’t have an accont? <a href="рпи" onclick="return false">Sign in</a></span>
     </div> 
     <div class="block14">
         <span class="text fourth">Sign in</span>
@@ -92,11 +90,11 @@
         <input type="text" class="password2" placeholder="password">
         <input type="text" class="rppassword" placeholder="repeat password">
         <button class="btsignup">sign up</button>
-        <a href="рпи" onclick="return false"><span class="facebook2"><i class="fab fa-facebook-f"></i></span></a>
-        <a href="рпи" onclick="return false"><span class="g2"><i class="fab fa-google-plus-g"></i></span></a>
+        <a href="https://facebook.com""><span class="facebook2"><i class="fab fa-facebook-f"></i></span></a>
+        <a href="https://gmail.com""><span class="g2"><i class="fab fa-google-plus-g"></i></span></a>
         <span class="text14-5">By joining LEMON, you agree to our </span>
         <a href="рпи" onclick="return false"><span class="text14-6">Terms of Service.</span></a>
-        <span class="text14-7">login</span>
+        <a href="рпи" onclick="return false"><span class="text14-7">login</span></a>
     </div>
 </div>
 
