--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1690,6 +1690,208 @@ body {
     left:935px;
     top:2760px;
 }
+.text10-1{
+    font-family: 'Josefin Sans';
+    transform:skew(-7deg);
+    font-size: 20px;
+    line-height: 1.2;
+    font-weight: 400;
+    letter-spacing: 0.025em;
+    color: #000000;
+    position: absolute;
+    left: 20px;
+    top:35px;
+}
+.icons10-1{
+    font-family: 'Font Awesome';
+    font-size: 16px;
+    line-height: 1.2;
+    font-weight: 400;
+    letter-spacing: 0.025em;
+    color: #555555;
+    position: absolute;
+    top: 40px;
+    right: 120px;
+}
+.icons10-2{
+    font-family: 'Font Awesome';
+    font-size: 16px;
+    line-height: 1.2;
+    font-weight: 400;
+    letter-spacing: 0.025em;
+    color: #555555;
+    position: absolute;
+    top: 40px;
+    right: 90px;
+}
+.icons10-3{
+    font-family: 'Font Awesome';
+    font-size: 16px;
+    line-height: 1.2;
+    font-weight: 400;
+    letter-spacing: 0.025em;
+    color: #555555;
+    position: absolute;
+    top: 40px;
+    right: 65px;
+}
+.icons10-4{
+    font-family: 'Font Awesome';
+    font-size: 16px;
+    line-height: 1.2;
+    font-weight: 400;
+    letter-spacing: 0.025em;
+    color: #555555;
+    position: absolute;
+    top: 40px;
+    right: 35px;
+}
+.line10-1{
+    width: 251px;
+    height: 2px;
+    opacity: 0.2;
+    background-color: #555555;
+    position: absolute;
+    top:65px;
+    left:15px;
+}
+.text10-2{
+    font-family: 'Playfair Display';
+    font-size: 20px;
+    line-height: 1.2;
+    font-weight: 900;
+    letter-spacing: 0.025em;
+    color: #055555;
+    position: absolute;
+    left:30px;
+    top:85px;
+}
+.text10-3{
+    font-family: 'Josefin Sans';
+    font-size: 14px;
+    line-height: 1.2;
+    font-weight: 300;
+    letter-spacing: 0.025em;
+    color: #6a6a6a;
+    position: absolute;
+    left:50px;
+    top:340px;
+    right:30px;
+}
+.line10-2{
+    width: 9px;
+    height: 68px;
+    background-color: #87d0c5;
+    position: absolute;
+    left:70px;
+    bottom: 125px;
+}
+.line10-3{
+    width: 10px;
+    height: 99px;
+    background-color: #0d5959;
+    position: absolute;
+    left:155px;
+    bottom: 125px;
+}
+.line10-4{
+    width: 9px;
+    height: 131px;
+    background-color: #b50051;
+    position: absolute;
+    left:245px;
+    bottom: 125px;
+}
+.text10-4{
+    opacity: 0.8;
+    font-family: 'Josefin Sans';
+    font-size: 18px;
+    line-height: 1.2;
+    font-weight: 300;
+    letter-spacing: 0.025em;
+    color: #555555;
+    writing-mode: tb-rl;
+    transform: rotate(-180deg);
+    position: absolute;
+    left:50px;
+    bottom: 125px;
+}
+.text10-5{
+    opacity: 0.8;
+    font-family: 'Josefin Sans';
+    font-size: 18px;
+    line-height: 1.2;
+    font-weight: 300;
+    letter-spacing: 0.025em;
+    color: #555555;
+    writing-mode: tb-rl;
+    transform: rotate(-180deg);
+    position: absolute;
+    left:135px;
+    bottom: 125px;
+}
+.text10-6{
+    opacity: 0.8;
+    font-family: 'Josefin Sans';
+    font-size: 18px;
+    line-height: 1.2;
+    font-weight: 300;
+    letter-spacing: 0.025em;
+    color: #555555;
+    writing-mode: tb-rl;
+    transform: rotate(-180deg);
+    position: absolute;
+    left:225px;
+    bottom: 125px;
+}
+.text10-7{
+    font-family: 'Open Sans';
+    font-size: 14px;
+    line-height: 1.2;
+    font-weight: 300;
+    letter-spacing: 0.025em;
+    color: #555555;
+    writing-mode: tb-rl;
+    transform: rotate(-180deg);
+    position: absolute;
+    left:67px;
+    top:185px;
+}
+.text10-8{
+    font-family: 'Open Sans';
+    font-size: 14px;
+    line-height: 1.2;
+    font-weight: 300;
+    letter-spacing: 0.025em;
+    color: #555555;
+    writing-mode: tb-rl;
+    transform: rotate(-180deg);
+    position: absolute;
+    left:152px;
+    top:155px;
+}
+.text10-9{
+    font-family: 'Open Sans';
+    font-size: 14px;
+    line-height: 1.2;
+    font-weight: 300;
+    letter-spacing: 0.025em;
+    color: #555555;
+    writing-mode: tb-rl;
+    transform: rotate(-180deg);
+    position: absolute;
+    left:242px;
+    top:120px;
+}
+.line10-5{
+    width: 203px;
+    height: 2px;
+    opacity: 0.2;
+    background-color: #555555;
+    position: absolute;
+    left:50px;
+    bottom:105px;
+}
 /* ======================ARTYOM===============*/
 .block11 {
     width: 290px;
