--- a/templates/index.html
+++ b/templates/index.html
@@ -234,7 +234,24 @@
         <a href="https://www.pinterest.com/"> <span class="icons9-4  "> <i class="fab fa-pinterest"></i></span></a>
     </div>
     <div class="block10">
-
+        <span class="text10-1">Timeline</span>
+        <a href=""> <span class="icons10-1"> <i class="fa fa-print"></i></span></a>
+        <a href="https://www.gmail.com/"> <span class="icons10-2"> <i class="fa fa-regular fa-envelope"></i></span></a>
+        <a href="https://www.facebook.com/"> <span class="icons10-3"> <i class="fab fa-facebook-f"></i></span></a>
+        <a href="https://www.pinterest.com/"> <span class="icons10-4  "> <i class="fab fa-pinterest"></i></span></a>
+        <img src="../styles/images/Ivan/line.png" class="line10-1">
+        <span class="text10-2">Time line</span>
+        <span class="text10-3">Eam adhuc iudico percipitur ex, ut malis audire voluptaria has.</span>
+        <img src="../styles/images/Ivan/gren1.jpg" class="line10-2">
+        <img src="../styles/images/Ivan/gren2.jpg" class="line10-3">
+        <img src="../styles/images/Ivan/redline1.jpg" class="line10-4">
+        <span class="text10-4">EASY</span>
+        <span class="text10-5">MIDDLE</span>
+        <span class="text10-6">LONG</span>
+        <span class="text10-7">15mins</span>
+        <span class="text10-8">25mins</span>
+        <span class="text10-9">40mins</span>
+        <img src="../styles/images/Ivan/line_4834.png" class="line10-5">
     </div>
 </div>
 
